# game-bits

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.cmake  LICENSE  README.md  TargetCommands.cmake  build.bat  build_vs2015_x64.bat  build_vs2017_x64.bat  build_vs2019.bat  build_vs2022.bat  game-bits.sublime-project  gbits.sublime-project
examples/block-world/: CMakeLists.txt  base_state.cc  base_state.h  block.h  block_world.cc  block_world.h  camera.cc  camera.h  chunk.cc  chunk.h  cube.h  game_types.h  gui_fonts.h  main.cc  play_state.cc  play_state.h  scene_types.h  states.cc  states.h  title_state.cc  title_state.h  world.cc  world.h  world_resources.cc  world_resources.h
src/gb/: CMakeLists.txt
src/gb/alloc/: CMakeLists.txt  pool_allocator.cc  pool_allocator.h  pool_allocator_test.cc  test_allocator.cc  test_allocator.h
src/gb/base/: CMakeLists.txt  access_token.h  allocator.cc  allocator.h  callback.h  callback_scope.h  callback_scope_test.cc  callback_test.cc  circular_queue.h  circular_queue_test.cc  clock.h  clock_test.cc  context.cc  context.h  context_builder.h  context_test.cc  fake_clock.h  flags.h  flags_test.cc  platform_requirements.cc  platform_requirements.h  queue.h  queue_test.cc  scoped_call.h  string_util.h  type_info.h  type_info_test.cc  unicode.cc  unicode.h  unicode_test.cc  validated_context.cc  validated_context.h  validated_context_test.cc  weak_ptr.h  weak_ptr_test.cc  win_platform.cc  win_platform.h
src/gb/collide/: CMakeLists.txt  intersect.cc  intersect.h  shapes.cc  shapes.h
src/gb/config/: CMakeLists.txt  config.cc  config.h  config_test.cc  text_config.cc  text_config.h  text_config_test.cc
src/gb/container/: CMakeLists.txt  array.h  buffer_view.h  buffer_view_2d.h  buffer_view_2d_test.cc  buffer_view_3d.h  buffer_view_3d_test.cc  buffer_view_operations.h  buffer_view_test.cc  buffer_view_test_types.h  container_stub.cc  offset_array.h  queue.h  queue_test.cc
src/gb/file/: CMakeLists.txt  chunk_file_test.cc  chunk_reader.cc  chunk_reader.h  chunk_types.h  chunk_writer.cc  chunk_writer.h  common_protocol_test.cc  common_protocol_test.h  file.cc  file.h  file_protocol.cc  file_protocol.h  file_protocol_test.cc  file_system.cc  file_system.h  file_system_test.cc  file_test.cc  file_types.h  local_file_protocol.cc  local_file_protocol.h  local_file_protocol_test.cc  memory_file_protocol.cc  memory_file_protocol.h  memory_file_protocol_test.cc  path.cc  path.h  path_test.cc  raw_file.h  test_protocol.cc  test_protocol.h  test_protocol_test.cc
src/gb/game/: CMakeLists.txt  game.cc  game.h  game_state.cc  game_state.h  game_state_machine.cc  game_state_machine.h  game_state_machine_test.cc  game_test.cc
src/gb/image/: CMakeLists.txt  image.cc  image.h  image_file.cc  image_file.h  image_types.h  image_view.cc  image_view.h  image_view_test.cc  pixel.h
src/gb/imgui/: CMakeLists.txt  gb_imconfig.h  imgui_instance.cc  imgui_instance.h  imgui_types.h
src/gb/imgui/sdl/: CMakeLists.txt
src/gb/job/: CMakeLists.txt  fiber_job_system.cc  fiber_job_system.h  fiber_job_system_test.cc  job_counter.h  job_fiber.h  job_fiber_test.cc  job_system.cc  job_system.h  job_types.h
src/gb/job/win/: CMakeLists.txt  win_job_fiber.cc
src/gb/message/: CMakeLists.txt  message_dispatcher.cc  message_dispatcher.h  message_endpoint.cc  message_endpoint.h  message_stack_endpoint.cc  message_stack_endpoint.h  message_stack_endpoint_test.cc  message_system.cc  message_system.h  message_system_test.cc  message_types.h
src/gb/parse/: CMakeLists.txt  lexer.cc  lexer.h  lexer_config.h  lexer_program.cc  lexer_program.h  lexer_program_test.cc  lexer_test.cc  lexer_types.h  parse_error.cc  parse_error.h  parse_result.cc  parse_result.h  parse_types.h  parser.cc  parser.h  parser_program.cc  parser_program.h  parser_program_test.cc  parser_rules.cc  parser_rules.h  parser_rules_test.cc  parser_test.cc  source_file.cc  source_file.h  source_file_test.cc  symbol.h  token.cc  token.h
src/gb/render/: CMakeLists.txt  binding.h  binding_data.h  binding_data_test.cc  draw_list.cc  draw_list.h  local_binding_data.cc  local_binding_data.h  local_binding_data_test.cc  material.cc  material.h  material_config.h  material_test.cc  material_type.cc  material_type.h  material_type_test.cc  mesh.cc  mesh.h  mesh_test.cc  mesh_view.cc  mesh_view.h  mesh_view_test.cc  pixel_colors.h  render_assert.cc  render_assert.h  render_backend.h  render_buffer.cc  render_buffer.h  render_buffer_test.cc  render_buffer_view.h  render_buffer_view_test.cc  render_pipeline.h  render_resource.fbs  render_resource_chunks.h  render_scene.h  render_scene_test.cc  render_scene_type.cc  render_scene_type.h  render_scene_type_test.cc  render_system.cc  (+35 more)
src/gb/render/vulkan/: CMakeLists.txt  vulkan_allocator.cc  vulkan_allocator.h  vulkan_backend.cc  vulkan_backend.h  vulkan_binding_data.cc  vulkan_binding_data.h  vulkan_binding_data_factory.cc  vulkan_binding_data_factory.h  vulkan_buffer.cc  vulkan_buffer.h  vulkan_descriptor_pool.cc  vulkan_descriptor_pool.h  vulkan_format.h  vulkan_garbage_collector.cc  vulkan_image.cc  (+19 more)
src/gb/resource/: CMakeLists.txt  resource.cc  resource.h  resource_chunks.h  resource_entry.cc  resource_entry.h  resource_file_reader.cc  resource_file_reader.h  resource_file_test.cc  resource_file_writer.cc  resource_file_writer.h  resource_loader_test.cc  resource_manager.cc  resource_manager.h  resource_name_reservation.cc  resource_name_reservation.h  resource_ptr.h  resource_set.cc  resource_set.h  resource_set_test.cc  resource_system.cc  resource_system.h  resource_test.cc  resource_thread_test.cc  resource_types.h  test_resources.h
src/gb/sdl/: CMakeLists.txt  sdl_glog.cc  sdl_glog.h
src/gb/test/: CMakeLists.txt  test_util.cc  test_util.h  thread_tester.cc  thread_tester.h  thread_tester_test.cc
src/gb/thread/: CMakeLists.txt  fiber.h  fiber_test.cc  gen_fiber.cc  gen_thread.cc  thread.h  thread_test.cc  thread_types.h  win_fiber.cc  win_thread.cc
templates/sdl/: CMakeLists.txt  build.bat  build_vs2019.bat
templates/sdl/src/: CMakeLists.txt  main.cc
(+134 files in other folders)
