## Copyright (c) 2020 John Pursey
##
## Use of this source code is governed by an MIT-style License that can be found
## in the LICENSE file or at https://opensource.org/licenses/MIT.

set(VS_FOLDER GameBits)

add_subdirectory(alloc)
add_subdirectory(base)
add_subdirectory(file)
add_subdirectory(game)
add_subdirectory(imgui)
add_subdirectory(job)
add_subdirectory(message)
add_subdirectory(render)
add_subdirectory(resource)
add_subdirectory(test)
